--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main class="container">
-      <header>Clarus Todos</header>
+      <header>My Plans</header>
       <section class="todo-add">
         <input type="text" id="todo-input" placeholder="Add New Todo..." />
         <button type="submit" id="todo-button">Add</button>
@@ -26,6 +26,7 @@
         <ul id="todo-ul"></ul>
       </section>
     </main>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="app2.js"></script>
   </body>
 </html>
