--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul id="todo-ul"></ul>
       </section>
     </main>
-    <!-- <script src="app.js"></script> -->
-    <script src="app2.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="app2.js"></script> -->
   </body>
 </html>
